--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 autogen = "^1.0.16"
 pandas = "^2.2.2"
+jupyter = "^1.0.0"
+notebook = "^7.2.1"
+ipykernel = "^6.29.4"
 
 [build-system]
 requires = ["poetry-core"]
