--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-autogen = "^1.0.16"
+python = ">=3.11,<3.13"
 pandas = "^2.2.2"
 jupyter = "^1.0.0"
 notebook = "^7.2.1"
 ipykernel = "^6.29.4"
+pyautogen = "^0.2.30"
+
+[tool.poetry.group.dev.dependencies]
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
